View Bag button now works. Also add a makeshift solution to the search-bar to fix  its caution text overflowing

--- a/css/style.css
+++ b/css/style.css
@@ -1444,6 +1444,7 @@ select {
   display: grid;
   justify-content: center;
   align-items: center;
+  white-space: pre;
 }
 
 .search::-webkit-search-cancel-button {
